--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<h1>Welcome to Deloitte Angular App</h1>
+<h1>App Component</h1>
+<p>App component works!</p>
+
+<h1>Hello, {{ title }}</h1>
+<p>Hi {{ firstName }} !</p>
+
+
+<!-- 
+  <app-home></app-home>
+
+<app-about></app-about> 
+-->
 
 <router-outlet />
 
