--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
 <h1>App Component</h1>
 <p>App component works!</p>
+<p>Hello, {{ title }}</p>
 
-<h1>Hello, {{ title }}</h1>
-<p>Hi {{ firstName }} !</p>
+<app-home></app-home>
+
+<!-- 
+'app-home' is not a known element:
+1. If 'app-home' is an Angular component, 
+then verify that it is included in 
+the '@Component.imports' of this component. 
+-->
 
 
 <!-- 
-  <app-home></app-home>
-
 <app-about></app-about> 
 -->
 
