--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,10 @@
 <h1>Home Component</h1>
 <p>Home component works!</p>
 <p>Hi {{firstName}} {{lastName}}!</p>
+<p> {{salary}} </p>
+<p> {{emp.eid}} </p>
+<h3>Data Binding</h3>
+<p>Interpolation</p>
+<p> {{salary}} </p>
+<p>Property binding</p>
+<p [innerText]="firstName"></p>
