--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,3 +8,7 @@
 <p> {{salary}} </p>
 <p>Property binding</p>
 <p [innerText]="firstName"></p>
+
+<button [disabled]="isAllowed">Click me</button>
+
+<!-- <p innerText="firstName"></p> -->
