--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <h1>App Component</h1>
 <p>App component works!</p>
-<p>Hello, {{ title }}</p>
 
+<!-- 
 <app-home></app-home>
+ -->
+
+<app-product-list></app-product-list>
 
 <router-outlet />
 
