--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <h1>Product List Component</h1>
 <p>product-list works!</p>
+<h5>Parent: ProductList, Child: ProductDetails</h5>
 
 <app-product-details></app-product-details>
