--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<h1>App Component</h1>
-<p>App component works!</p>
-
+<h1>{{title}}</h1>
 
 <app-product-list></app-product-list>
 
-<router-outlet />
 
 
 
