--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,4 +1,5 @@
-<h1>Product Details Component</h1>
-<p>product-details works!</p>
-
-<p>Parent data in child component: {{parentDataInChild}}</p>
+<h3>Product Details</h3>
+<div *ngIf="product">
+    <h2>{{ product.name }}</h2>
+    <p>{{ product.price | currency: 'INR' }}/-</p>
+</div>
