ng forms and more

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <h1>Login</h1>
 <p>Login with Template Driven Form</p>
 
-<form>
+<form (ngSubmit)="submitLogin()">
     <div>
         <label for="username"></label>
-        <input type="text" id="username" name="username" />
+        <input type="text" id="username" name="username" [(ngModel)]="loginData.username" required autofocus/>
     </div>
     <div>
         <label for="password"></label>
-        <input type="password" id="password" name="password" />
+        <input type="password" id="password" name="password" [(ngModel)]="loginData.password" required />
     </div>
     <div>
         <input type="submit" value="Login" />
