ng forms and more

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,15 +1,20 @@
 <h1>Register</h1>
 <p>Register with Reactive Form</p>
+
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div>
         <label for="username">Username:</label>
-        <input type="text" id="username" formControlName="username">
-    </div>
+        <input type="text" id="username" formControlName="username" autofocus>
+        <div>
 
+        </div>
+    </div>
     <div>
         <label for="password">Password:</label>
         <input type="password" id="password" formControlName="password">
-    </div>
+        <div>
 
+        </div>
+    </div>
     <button type="submit" [disabled]="registerForm.invalid">Submit</button>
 </form>
