--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
-<app-login></app-login>
-<!-- <app-register></app-register> -->
+<!-- <app-login></app-login> -->
+<app-register></app-register>
 
 <app-product-list></app-product-list>
 
