--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,6 +6,35 @@
         <label for="username">Username:</label>
         <input type="text" id="username" formControlName="username" autofocus>
         <div>
+            <div *ngIf="registerForm.get('username')?.hasError('required') && registerForm.get('username')?.touched">
+                Username is required.
+            </div>
+            <div *ngIf="registerForm.get('username')?.hasError('minlength') && registerForm.get('username')?.touched">
+                Username must be between 4 and 8 characters.
+            </div>
+        </div>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" formControlName="password">
+        <div>
+            <div *ngIf="registerForm.get('password')?.hasError('required') && registerForm.get('password')?.touched">
+                Password is required.
+            </div>
+        </div>
+    </div>
+    <button type="submit" [disabled]="registerForm.invalid">Submit</button>
+</form>
+
+<!-- 
+<h1>Register</h1>
+<p>Register with Reactive Form</p>
+
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" formControlName="username" autofocus>
+        <div>
 
         </div>
     </div>
@@ -18,3 +47,4 @@
     </div>
     <button type="submit" [disabled]="registerForm.invalid">Submit</button>
 </form>
+ -->
