ng forms and more

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,16 @@
-<h1>Home Component</h1>
+<div style="background-image: 
+url('https://rapidcorpindia.com/content/uploads/2019/01/Deloitte_Interiors_02.jpg');
+background-repeat: no-repeat; background-size: cover; height: auto; max-width: 100%;">
+    <div style="min-height: 100vh; 
+    text-shadow: 2px 2px #cccccc; 
+    text-align: left;">
+        <h1>DeloitteKart</h1>
+        <a href="#">Start shopping...</a>
+    </div>
+</div>
+
+
+<!-- <h1>Home Component</h1>
 <p>Home component works!</p>
 
 <div>
@@ -7,7 +19,7 @@
     <ul>
         <li *ngFor="let emp of employees"> {{emp}} </li>
     </ul>
-</div>
+</div> -->
 
 
 <!-- 
