--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,23 @@
-<h1>{{title}}</h1>
+<nav>
+  <ul>
+    <li><a href="#">
+        <img height="20px" title="Home"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Deloitte-logo-black.svg/1280px-Deloitte-logo-black.svg.png"
+          alt="deloitte logo">
+      </a></li>
+    <li><a href="#">Logout</a></li>
+    <li><a href="#">Login</a></li>
+    <li><a href="#">Register</a></li>
+    <li><a href="#">Featured Product</a></li>
+    <li><a href="#">Products</a></li>
+  </ul>
+</nav>
+
+<app-home></app-home>
 
 <!-- <app-login></app-login> -->
 
-<app-register></app-register>
+<!-- <app-register></app-register> -->
 
 <!-- <app-product-list></app-product-list> -->
 
