ng routes and more

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,13 @@
   </ul>
 </nav>
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 
 <!-- <app-login></app-login> -->
 
 <!-- <app-register></app-register> -->
 
-<!-- <app-product-list></app-product-list> -->
+<app-product-list></app-product-list>
 
 
 
