ng routes and more

--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -8,3 +8,10 @@
         <img width="20%" src="{{image}}" alt={{product.name}} />
     </span>
 </section>
+
+<section>
+    <p>Add a Product</p>
+    <form>
+
+    </form>
+</section>
