--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -11,6 +11,7 @@
     </form>
 </section>
 
+<p>All Products</p>
 <section ngClass="product-list">
     <section ngClass="product-card" *ngFor="let product of products">
         <h4>{{ product.title }}</h4>
