ng routes and more

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -4,7 +4,7 @@
 <section>
     <p>Get Product By Id</p>
     <form #productIdForm="ngForm" (ngSubmit)="submitProductById(productIdForm)">
-        <input type="number" id="prouctId" name="prouctId" [(ngModel)]="productId">
+        <input type="number" id="productId" name="productId" [(ngModel)]="productId">
         <br />
         <input type="submit" value="Search Product By Id">
     </form>
