ng routes and more

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,6 +1,10 @@
 <h1>Product List</h1>
 
 <section>
+
+</section>
+
+<section>
     <p>View All Products</p>
     <button (click)="viewAllProducts()">View All Products</button>
 </section>
