--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,9 @@
 
 <!-- <app-register></app-register> -->
 
-<!-- <app-product-list></app-product-list> -->
+<app-product-list></app-product-list>
 
-<router-outlet />
+<!-- <router-outlet /> -->
 <!-- <router-outlet></router-outlet> -->
 
 
