routes and more

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,6 @@
-<nav>
-  <ul>
-    <li><a href="#">
-        <img height="20px" title="Home"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Deloitte-logo-black.svg/1280px-Deloitte-logo-black.svg.png"
-          alt="deloitte logo">
-      </a></li>
-    <li><a href="#">Logout</a></li>
-    <li><a href="#">Login</a></li>
-    <li><a href="#">Register</a></li>
-    <li><a href="#">Featured Product</a></li>
-    <li><a href="#">Products</a></li>
-  </ul>
-</nav>
+<app-menubar></app-menubar>
 
-
-<!-- <app-home></app-home> -->
-
-<!-- <app-login></app-login> -->
-
-<!-- <app-register></app-register> -->
-
-<app-product-list></app-product-list>
-
-<!-- <router-outlet /> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
 
 <!-- <style>
@@ -345,3 +322,4 @@
 <router-outlet />
 
  -->
+ 
