routes and more

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -5,11 +5,12 @@
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Deloitte-logo-black.svg/1280px-Deloitte-logo-black.svg.png"
                     alt="deloitte logo">
             </a></li>
-        <li><a routerLink="#">Logout</a></li>
+        <li><a routerLink="logout">Logout</a></li>
         <li><a [routerLink]="'login'">Login</a></li>
         <li><a routerLink="register">Register</a></li>
+        <li><a routerLink="add-product">Add Product</a></li>
         <li><a [routerLink]="['/product-details', featuredProductId]">Featured Product</a></li>
-        <li><a routerLink="products-list">Products</a></li>
+        <li><a routerLink="products-list">Product List</a></li>
     </ul>
 </nav>
 
