--- a/src/app/components/add-product/add-product.component.html
+++ b/src/app/components/add-product/add-product.component.html
@@ -1,9 +1,40 @@
 <h1>Add Product</h1>
 <p>Add a new product</p>
 
-<form>
 
+<form [formGroup]="productForm" (ngSubmit)="addProduct()">
+    <div>
+        <label for="title">Title:</label>
+        <input type="text" id="title" formControlName="title" autofocus>
+        <div>
+            <div *ngIf="productForm.get('title')?.hasError('required') && productForm.get('title')?.touched">
+                Product title is required.
+            </div>
+        </div>
+    </div>
+    <div>
+        <label for="title">Description:</label>
+        <input type="text" id="description" formControlName="description">
+        <div>
+            <div
+                *ngIf="productForm.get('description')?.hasError('required') && productForm.get('description')?.touched">
+                Product description is required.
+            </div>
+        </div>
+    </div>
+    <div>
+        <label for="title">Price:</label>
+        <input type="number" id="price" formControlName="price">
+        <div>
+            <div *ngIf="productForm.get('price')?.hasError('required') && productForm.get('price')?.touched">
+                Product price is required.
+            </div>
+        </div>
+    </div>
+
+    <input type="submit" [disabled]="productForm.invalid" value="Add" />
 </form>
 
-
-
+<section>
+    <p *ngIf="successMessage">{{successMessage}}</p>
+</section>
